# examples

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  compose.yaml  mise.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/deno-2/: devcontainer.json
.devcontainer/node-20/: devcontainer.json
.devcontainer/node-22/: devcontainer.json
.devcontainer/python-3/: devcontainer.json
.github/workflows/: docker-build.yml  playwright.yml  publish.yml
.trunk/: trunk.yaml
examples/astro/: .dockerignore  Dockerfile  README.md  astro.config.mjs  compose.yaml  package-lock.json  package.json
examples/deno/: .dockerignore  .env.example  Dockerfile  README.md  arcjet-example.json  compose.yaml  deno.json
examples/expressjs/: .dockerignore  .env.local.example  .gitignore  README.md  compose.yaml  index.ts  package-lock.json  package.json  tsconfig.json
examples/fastapi/: .env.example  Dockerfile  README.md  arcjet-example.json  compose.yaml  pyproject.toml
examples/fastapi/app/: arcjet.py  main.py
examples/fastapi/app/routers/: attack.py  bots.py  detect_prompt_injection.py  rate_limiting.py
examples/fastapi/fix-arcjet/proto/api/v1/: remote_rules_connect.py  remote_rules_pb2.py
examples/fastify/: .dockerignore  README.md  compose.yaml  package-lock.json  package.json  tsconfig.json
examples/firebase-functions/: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  example.secret.local  firebase.json  package-lock.json  package.json  tsconfig.json
examples/flask/: .dockerignore  .env.example  Dockerfile  README.md  arcjet-example.json  compose.yaml  pyproject.toml
examples/flask/app/: app.py  arcjet.py  settings.py
examples/flask/app/routes/: attack.py  bots.py  detect_prompt_injection.py  rate_limiting.py
examples/gatsby/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  compose.yaml  gatsby-config.ts  package-lock.json  package.json  tsconfig.json
examples/guard-vercel-ai-agent/: package.json
examples/nestjs/: .dockerignore  .env.local.example  Dockerfile  README.md  biome.json  compose.yaml  package-lock.json  package.json
examples/nextjs-bot-protection/: .dockerignore  .env.local.example  README.md  compose.yaml  middleware.ts  package-lock.json  package.json
examples/nextjs-fly/: .dockerignore  Dockerfile.local  README.md  compose.yaml  next.config.mjs  package-lock.json  package.json  proxy.ts
examples/nextjs-form/: README.md  compose.yaml  middleware.ts  package-lock.json  package.json  proxy.ts
examples/nextjs-server-action/: .dockerignore  (+8 more)
examples/python-fastapi/: .dockerignore  README.md  main.py  pyproject.toml
examples/python-fastapi/app/: settings.py
examples/python-fastapi/app/routers/: bots.py
examples/python-fastapi/fix-arcjet/: README.txt
examples/python-fastapi/fix-arcjet/proto/api/v1/: remote_rules_pb2.pyi
examples/python-fastapi/fix-arcjet/proto/decide/v1alpha1/: decide_connect.py  decide_pb2.py  decide_pb2.pyi
scripts/: lib.test.ts  lib.ts  prepare-to-publish.ts
(+234 files in other folders)
