[project]
dependencies = [
    "arcjet==0.4.1",
    "fastapi[standard]==0.129.0",
    "pydantic-settings==2.13.0",
    "uvicorn==0.41.0",
]
description = "Arcjet FastAPI example app. Arcjet helps developers protect their apps in just a few lines of code. Bot detection. Rate limiting. Email validation. Attack protection. Data redaction. A developer-first approach to security."
name = "app"
readme = "README.md"
requires-python = ">=3.10,<4.0"
version = "0.1.0"

