[project]
dependencies = [
    "arcjet==0.2.2",
    "flask==3.1.2",
    "gunicorn==23.0.0"
]
description = "Arcjet Flask example app. Arcjet helps developers protect their apps in just a few lines of code. Bot detection. Rate limiting. Email validation. Attack protection. Data redaction. A developer-first approach to security."
name = "app"
readme = "README.md"
requires-python = ">=3.10,<4.0"
version = "0.1.0"

