[project]
dependencies = [
    "arcjet==0.2.0",
    "fastapi[standard]==0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn==0.40.0",
]
description = "Arcjet FastAPI example app. Arcjet helps developers protect their apps in just a few lines of code. Bot detection. Rate limiting. Email validation. Attack protection. Data redaction. A developer-first approach to security."
name = "arcjet-example-python-fastapi"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.scripts]
dev = "dev:main"
